Fixed pagination display on small screens.

--- a/src/styles/field-pagination.css
+++ b/src/styles/field-pagination.css
@@ -2,9 +2,13 @@
     Field pagination styles. 
 *******************************/
 
-.field-pagination {
+.field-pagination-container {
     display: flex;
     flex-flow: row wrap; 
     justify-content: center;
     align-items: center;
+}
+
+.field-pagination-container > .field-pagination {
+    flex-wrap: wrap;
 }
